[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codemmlu"
version = "0.0.2.1"
authors = [
  { name="Dung Manh Nguyen", email="dungnm.workspace@gmail.com" },
]
description = "CodeMMLU Evaluator: A framework for evaluating language models on CodeMMLU benchmark."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "transformers>=4.39.0",
    "datasets>=2.17.1",
    "accelerate>=0.27.2",
    "deepspeed>=0.13.2",
    "peft>=0.10.0",
    "vllm"
]

[project.urls]
"Homepage" = "https://fsoft-ai4code.github.io/codemmlu/"
"Bug Tracker" = "https://github.com/FSoft-AI4Code/CodeMMLU/issues"

[project.scripts]
codemmlu = "codemmlu.__main__:main"
